refinement: Remove obsolete JVM argument MaxPermSize
   - Support for JVM option MaxPermSize was removed in Java 8.0

Change-Id: I2a95dcfb139ce80b976f3f68dec6c706f0825c90